@@ -1,5 +1,7 @@
 package com.bookingnwt.systemevents.service;
 
+import com.bookingnwt.systemevents.dto.AuditLogBatchRequestDTO;
+import com.bookingnwt.systemevents.dto.AuditLogPatchDTO;
 import com.bookingnwt.systemevents.dto.AuditLogRequestDTO;
 import com.bookingnwt.systemevents.dto.AuditLogResponseDTO;
 import com.bookingnwt.systemevents.exception.ResourceNotFoundException;
@@ -13,14 +15,19 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 
 import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -47,7 +54,7 @@ class AuditLogServiceTest {
         auditLog.setAction("CREATE");
         auditLog.setEntityType("PROPERTY");
         auditLog.setEntityId(10L);
-        auditLog.setDetails("Kreiran objekat: Apartman Baščaršija");
+        auditLog.setDetails("Kreiran objekat");
         auditLog.setIpAddress("192.168.1.10");
         auditLog.setCreatedAt(LocalDateTime.now());
 
@@ -56,7 +63,7 @@ class AuditLogServiceTest {
         requestDTO.setAction("CREATE");
         requestDTO.setEntityType("PROPERTY");
         requestDTO.setEntityId(10L);
-        requestDTO.setDetails("Kreiran objekat: Apartman Baščaršija");
+        requestDTO.setDetails("Kreiran objekat");
         requestDTO.setIpAddress("192.168.1.10");
 
         responseDTO = new AuditLogResponseDTO();
@@ -65,7 +72,7 @@ class AuditLogServiceTest {
         responseDTO.setAction("CREATE");
         responseDTO.setEntityType("PROPERTY");
         responseDTO.setEntityId(10L);
-        responseDTO.setDetails("Kreiran objekat: Apartman Baščaršija");
+        responseDTO.setDetails("Kreiran objekat");
         responseDTO.setIpAddress("192.168.1.10");
         responseDTO.setCreatedAt(auditLog.getCreatedAt());
     }
@@ -80,8 +87,29 @@ class AuditLogServiceTest {
 
         assertNotNull(result);
         assertEquals("CREATE", result.getAction());
-        assertEquals("PROPERTY", result.getEntityType());
         verify(auditLogRepository, times(1)).save(any(AuditLog.class));
+    }
+
+    @Test
+    void createBatch_Success() {
+        AuditLogRequestDTO r2 = new AuditLogRequestDTO();
+        r2.setUserId(3L); r2.setAction("UPDATE"); r2.setEntityType("RESERVATION");
+        AuditLog a2 = new AuditLog();
+        a2.setId(2L); a2.setUserId(3L); a2.setAction("UPDATE"); a2.setEntityType("RESERVATION");
+
+        AuditLogBatchRequestDTO batch = new AuditLogBatchRequestDTO();
+        batch.setLogs(Arrays.asList(requestDTO, r2));
+
+        when(auditLogMapper.toEntity(requestDTO)).thenReturn(auditLog);
+        when(auditLogMapper.toEntity(r2)).thenReturn(a2);
+        when(auditLogRepository.saveAll(anyList())).thenReturn(Arrays.asList(auditLog, a2));
+        when(auditLogMapper.toDTO(auditLog)).thenReturn(responseDTO);
+        when(auditLogMapper.toDTO(a2)).thenReturn(new AuditLogResponseDTO());
+
+        List<AuditLogResponseDTO> result = auditLogService.createBatch(batch);
+
+        assertEquals(2, result.size());
+        verify(auditLogRepository).saveAll(anyList());
     }
 
     @Test
@@ -90,80 +118,90 @@ class AuditLogServiceTest {
         when(auditLogMapper.toDTO(auditLog)).thenReturn(responseDTO);
 
         AuditLogResponseDTO result = auditLogService.getAuditLogById(1L);
-
-        assertNotNull(result);
         assertEquals(1L, result.getId());
     }
 
     @Test
     void getAuditLogById_NotFound() {
         when(auditLogRepository.findById(99L)).thenReturn(Optional.empty());
-
         assertThrows(ResourceNotFoundException.class, () -> auditLogService.getAuditLogById(99L));
     }
 
     @Test
-    void getAllAuditLogs_Success() {
-        AuditLog a2 = new AuditLog();
-        a2.setId(2L);
-        AuditLogResponseDTO r2 = new AuditLogResponseDTO();
-        r2.setId(2L);
-
-        when(auditLogRepository.findAll()).thenReturn(Arrays.asList(auditLog, a2));
+    void getAllAuditLogs_Pageable() {
+        Page<AuditLog> page = new PageImpl<>(List.of(auditLog), PageRequest.of(0, 10), 1);
+        when(auditLogRepository.findAll(any(PageRequest.class))).thenReturn(page);
         when(auditLogMapper.toDTO(auditLog)).thenReturn(responseDTO);
-        when(auditLogMapper.toDTO(a2)).thenReturn(r2);
 
-        List<AuditLogResponseDTO> result = auditLogService.getAllAuditLogs();
-
-        assertEquals(2, result.size());
+        Page<AuditLogResponseDTO> result = auditLogService.getAllAuditLogs(PageRequest.of(0, 10));
+        assertEquals(1, result.getTotalElements());
     }
 
     @Test
-    void getAuditLogsByUserId_Success() {
-        when(auditLogRepository.findByUserIdOrderByCreatedAtDesc(2L)).thenReturn(List.of(auditLog));
+    void filter_WithParams() {
+        Page<AuditLog> page = new PageImpl<>(List.of(auditLog), PageRequest.of(0, 10), 1);
+        when(auditLogRepository.filter(any(), any(), any(), any(), any(), any())).thenReturn(page);
         when(auditLogMapper.toDTO(auditLog)).thenReturn(responseDTO);
 
-        List<AuditLogResponseDTO> result = auditLogService.getAuditLogsByUserId(2L);
+        Page<AuditLogResponseDTO> result = auditLogService.filter(
+                2L, "CREATE", "PROPERTY", null, null, PageRequest.of(0, 10));
 
-        assertEquals(1, result.size());
-        assertEquals(2L, result.get(0).getUserId());
+        assertEquals(1, result.getTotalElements());
     }
 
     @Test
-    void getAuditLogsByEntityType_Success() {
-        when(auditLogRepository.findByEntityTypeOrderByCreatedAtDesc("PROPERTY")).thenReturn(List.of(auditLog));
-        when(auditLogMapper.toDTO(auditLog)).thenReturn(responseDTO);
+    void topActionsSince_Success() {
+        Object[] row = new Object[]{"CREATE", 42L};
+        when(auditLogRepository.topActionsSince(any())).thenReturn(List.of(row));
 
-        List<AuditLogResponseDTO> result = auditLogService.getAuditLogsByEntityType("PROPERTY");
+        List<Map<String, Object>> result = auditLogService.topActionsSince(LocalDateTime.now().minusDays(1));
 
         assertEquals(1, result.size());
-        assertEquals("PROPERTY", result.get(0).getEntityType());
+        assertEquals("CREATE", result.get(0).get("action"));
+        assertEquals(42L, result.get(0).get("count"));
     }
 
     @Test
-    void getAuditLogsByAction_Success() {
-        when(auditLogRepository.findByActionOrderByCreatedAtDesc("CREATE")).thenReturn(List.of(auditLog));
-        when(auditLogMapper.toDTO(auditLog)).thenReturn(responseDTO);
+    void patchAuditLog_OnlySetsProvidedFields() {
+        when(auditLogRepository.findById(1L)).thenReturn(Optional.of(auditLog));
+        when(auditLogRepository.save(any(AuditLog.class))).thenAnswer(inv -> inv.getArgument(0));
+        when(auditLogMapper.toDTO(any(AuditLog.class))).thenAnswer(inv -> {
+            AuditLog a = inv.getArgument(0);
+            AuditLogResponseDTO d = new AuditLogResponseDTO();
+            d.setId(a.getId());
+            d.setDetails(a.getDetails());
+            d.setAction(a.getAction());
+            return d;
+        });
 
-        List<AuditLogResponseDTO> result = auditLogService.getAuditLogsByAction("CREATE");
+        AuditLogPatchDTO patch = new AuditLogPatchDTO();
+        patch.setDetails("Korigovano");
 
-        assertEquals(1, result.size());
-        assertEquals("CREATE", result.get(0).getAction());
+        AuditLogResponseDTO result = auditLogService.patchAuditLog(1L, patch);
+
+        assertEquals("Korigovano", result.getDetails());
+        // Action nije bio u patchu, ostaje nepromjenjen.
+        assertEquals("CREATE", result.getAction());
+    }
+
+    @Test
+    void patchAuditLog_NotFound() {
+        when(auditLogRepository.findById(99L)).thenReturn(Optional.empty());
+        AuditLogPatchDTO patch = new AuditLogPatchDTO();
+        patch.setDetails("X");
+        assertThrows(ResourceNotFoundException.class, () -> auditLogService.patchAuditLog(99L, patch));
     }
 
     @Test
     void deleteAuditLog_Success() {
         when(auditLogRepository.existsById(1L)).thenReturn(true);
         doNothing().when(auditLogRepository).deleteById(1L);
-
         assertDoesNotThrow(() -> auditLogService.deleteAuditLog(1L));
-        verify(auditLogRepository, times(1)).deleteById(1L);
     }
 
     @Test
     void deleteAuditLog_NotFound() {
         when(auditLogRepository.existsById(99L)).thenReturn(false);
-
         assertThrows(ResourceNotFoundException.class, () -> auditLogService.deleteAuditLog(99L));
     }
 }
